another try to fix ios9 body overflow issue

--- a/front/styles/appDemo/_app-searchResults.less
+++ b/front/styles/appDemo/_app-searchResults.less
@@ -5,6 +5,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     padding-right: 0 !important;
+    position: relative;
 }
 
 .pane {
